# guy-fighter

./: .gitignore  Cargo.toml  Makefile  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json  install_tooling.sh
add/: adder.wasm  docs:adder@0.1.0.wasm  justfile  main.go
add/wit/: component.wit
c-plugin/: Makefile
go-plugin/: Makefile  go.mod  main.go  plugin.go
go-plugin/wit/: guy-fighter.wit
guy-fighter/: Cargo.toml
guy-fighter/src/: game.rs  names.rs  visualization.rs
js-plugin/: Makefile
rust-plugin/: Cargo.toml  Makefile
rust-plugin/src/: lib.rs
wit/: deps.toml
wit-bindgen/: Cargo.toml  README.md
wit-bindgen/.github/workflows/: main.yml
wit-bindgen/ci/: publish.rs
wit-bindgen/crates/test/: README.md
wit-bindgen/crates/test/src/: lib.rs  zig.rs
wit-bindgen/crates/zig/: Cargo.toml
wit-bindgen/crates/zig/src/: lib.rs
wit-bindgen/tests/: README.md
wit-bindgen/tests/runtime/: main.rs
zig-plugin/: Makefile  main.zig  toggler.wit
