[package]
name = "guy-fighter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "=4.5.47", features = ["derive"] }
rand = { version = "=0.9.2", features = ["thread_rng"] }
rustyline = { version = "=17.0.1" }
unicode-width = { version = "=0.2.1" }
wasmtime = { version = "=37.0.0", git = "https://github.com/bytecodealliance/wasip3-prototyping", rev = "68389f75" }
wasmtime-wasi = { version = "=37.0.0", git = "https://github.com/bytecodealliance/wasip3-prototyping", rev = "68389f75" }
