[package]
name = "guy-fighter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "=4.5.50", features = ["derive"] }
rand = { version = "=0.9.2", features = ["thread_rng"] }
rustyline = { version = "=17.0.2" }
unicode-width = { version = "=0.2.2" }
wasmtime = { version = "=38.0.3" }
wasmtime-wasi = { version = "=38.0.3" }
